yaml-files/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: frontend.20.232.74.184.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p1-project1
            port:
              number: 80
